--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@astrojs/preact": "^0.2.0",
     "dayjs": "^1.11.3",
+    "firebase": "^9.8.4",
     "preact": "^10.8.2"
   }
 }
